--- a/package.json
+++ b/package.json
@@ -20,7 +20,10 @@
     "react-dom": "^18.2.0",
     "react-fast-marquee": "^1.6.1",
     "react-icons": "^4.11.0",
+    "react-loader-spinner": "^5.4.5",
     "react-router-dom": "^6.16.0",
+    "react-toastify": "^9.1.3",
+    "react-tooltip": "^5.21.5",
     "sort-by": "^1.2.0",
     "sweetalert2": "^11.7.32"
   },
